; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/dc/extr_bcode.c_normalize.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/dc/extr_bcode.c_normalize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.number = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @normalize(%struct.number* %0, i64 %1) #0 {
  %3 = alloca %struct.number*, align 8
  %4 = alloca i64, align 8
  store %struct.number* %0, %struct.number** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.number*, %struct.number** %3, align 8
  %6 = getelementptr inbounds %struct.number, %struct.number* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = load i64, i64* %4, align 8
  %9 = load %struct.number*, %struct.number** %3, align 8
  %10 = getelementptr inbounds %struct.number, %struct.number* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = sub nsw i64 %8, %11
  %13 = call i32 @scale_number(i32 %7, i64 %12)
  %14 = load i64, i64* %4, align 8
  %15 = load %struct.number*, %struct.number** %3, align 8
  %16 = getelementptr inbounds %struct.number, %struct.number* %15, i32 0, i32 0
  store i64 %14, i64* %16, align 8
  ret void
}

declare dso_local i32 @scale_number(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
